Download ranking file from web